syntax = "proto3";

package xai.v1;

option go_package = "github.com/ZaguanLabs/xai-sdk-go/proto/gen/go/xai/v1;xaiv1";

// Files service for file management
service Files {
  // Upload a file
  rpc UploadFile(stream UploadFileChunk) returns (File);
  
  // Download a file
  rpc DownloadFile(DownloadFileRequest) returns (stream FileChunk);
  
  // List files
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
  
  // Get file metadata
  rpc GetFile(GetFileRequest) returns (File);
  
  // Delete a file
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}

// File metadata
message File {
  string id = 1;
  string filename = 2;
  int64 size = 3;
  int64 created_at = 4;
}

// Upload chunk
message UploadFileChunk {
  oneof data {
    UploadFileInit init = 1;
    bytes chunk = 2;
  }
}

// Upload initialization
message UploadFileInit {
  string filename = 1;
}

// Download request
message DownloadFileRequest {
  string file_id = 1;
}

// File chunk
message FileChunk {
  bytes data = 1;
}

// List files request
message ListFilesRequest {
  optional int32 limit = 1;
  optional string after = 2;
}

// List files response
message ListFilesResponse {
  repeated File files = 1;
  bool has_more = 2;
}

// Get file request
message GetFileRequest {
  string file_id = 1;
}

// Delete file request
message DeleteFileRequest {
  string file_id = 1;
}

// Delete file response
message DeleteFileResponse {
  bool deleted = 1;
}
