syntax = "proto3";

package xai_api;

option go_package = "github.com/ZaguanLabs/xai-sdk-go/proto/gen/go/xai/v1;xaiv1";

import "google/protobuf/timestamp.proto";

enum ImageDetail {
  DETAIL_INVALID = 0;
  DETAIL_AUTO = 1;
  DETAIL_LOW = 2;
  DETAIL_HIGH = 3;
}

enum ImageFormat {
  IMG_FORMAT_INVALID = 0;
  IMG_FORMAT_BASE64 = 1;
  IMG_FORMAT_URL = 2;
}

message GenerateImageRequest {
  string prompt = 1;
  string model = 2;
  int32 n = 3;
  string user = 4;
  ImageUrlContent image = 5;
  ImageFormat format = 11;
}

message GeneratedImage {
  string base64 = 1;
  string up_sampled_prompt = 2;
  string url = 3;
  bool respect_moderation = 4;
}

message ImageResponse {
  repeated GeneratedImage images = 1;
  string model = 2;
}

message ImageUrlContent {
  string image_url = 1;
  ImageDetail detail = 2;
}
